--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,11 @@
 FROM mcr.microsoft.com/devcontainers/python:0-3.10
+# FROM pytorch/pytorch
+# FROM pytorch/pytorch:2.1.2-cuda12.1-cudnn8-devel
 
-RUN apt-get update && apt install git-lfs
+
+RUN apt-get update && apt install git-lfs -y
+# RUN apt install cuda -y
+
 
 RUN python -m pip install --upgrade pip \
     && python -m pip install 'flit>=3.8.0'
